# todo-cli

./: LICENSE.txt  README.md  pyproject.toml
tests/: test_position_validation.py
todocli/: database.py  todo.py
