[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omar1324-todo-cli"
version = "1.1.2"
description = "A lightweight command-line Todo manager built with Typer and Rich."
readme = "README.md"
requires-python = ">=3.9"

authors = [{name = "Omar", email = "ahlawyomar95@gmail.com"}]

dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.0.0"]
  
[tool.setuptools]
packages = ["todocli"]

[project.scripts]
todo = "todocli.todo:app"
